--- a/vue_token_auth-master/index.html
+++ b/vue_token_auth-master/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>umag-sdi-web</title>
+    <title>Vote4All</title>
   </head>
   <body>
     <div id="app"></div>
